[metadata]
name = gktrlib
version = attr: gktrlib.__version__
description = Test report library for python tests.
long_description = file: README.md
keyword = test
license = MIT License
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.7
include_package_data = True

[options.package_data]
* = *.md, *.js, *.css
gktrlib = data/*.html

[options.packages.find]
where = src